# celechron-tauri

./: .gitignore  README.md  commitlint.config.cjs  index.html  package-lock.json  package.json  start_dev.sh  test_blank.cjs  test_blank.js
.github/workflows/: quality.yml  release-pack.yml
.husky/: commit-msg  pre-commit  pre-push
docs/engineering/: conventions.md  quality-gates.md  release.md
public/assets/: shader-worker-CJN-6C3l.js
scripts/: check-colors.mjs  check-secrets.mjs  color-baseline.json  generate-release-manifest.mjs  local-smoke.mjs  patch-android-signing.mjs  sync-version.mjs  validate-commit-msg.mjs
src/: App.vue  init.ts  main.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/src/: api.rs  classroom.rs  courses.rs  gpa.rs  integrations.rs  lib.rs  main.rs  materials.rs  term.rs  zdbk.rs  zjuam.rs
src/components/: Login.vue  MainLayout.vue  PomodoroWidget.vue  SearchModal.vue
src/components/ui/: ActionPill.vue  InlineStat.vue  SectionCard.vue  SegmentedFilter.vue  StatusBanner.vue
src/components/views/: CalendarView.vue  FlowView.vue  MaterialsView.vue  OptionView.vue  ScholarView.vue  TaskView.vue
src/composables/: useAccounts.ts  useBiometric.ts  usePreferences.ts  useTheme.ts
src/services/: api.ts
src/styles/: tokens.css
src/types/: api.ts
src/utils/: semester.ts  timetable.ts
