[package]
name = "celechron"
version = "0.2.0"
description = "Celechron - Time scheduler for ZJUers"
authors = ["Celechron Team"]
edition = "2021"

[lib]
name = "celechron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1"
hex = "0.4"
num-bigint = "0.4"
tauri-plugin-single-instance = "2.4.0"
