[package]
name = "celechron"
version = "0.2.1"
description = "Celechron - Time scheduler for ZJUers"
authors = ["Celechron Team"]
edition = "2021"

[lib]
name = "celechron_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
regex = "1"
hex = "0.4"
num-bigint = "0.4"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometric = "2"
